--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src=".//images/camila-garcia.jpg" alt="Camila Garcia" height="260" width="264">
+                    <img src="./images/camila-garcia.jpg" alt="Camila Garcia" height="260" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
